# amrMakeDualMesh

./: CMakeLists.txt  README.md  cubesGeneration.cpp  makeGrids.cpp  makeGrids3Kernels.cu  makeGrids4Kernels.cu  mem.sh  testBricksOutput.cpp  timer.h
data/: denseLevel_0.cubes
submodules/umesh/: Makefile  cmake_install.cmake
submodules/umesh/apps/: Makefile  cmake_install.cmake
submodules/umesh/apps/computeFaces/: Makefile  cmake_install.cmake
submodules/umesh/converters/: Makefile  cmake_install.cmake
submodules/umesh/umesh/: Makefile  check.h  cmake_install.cmake
